GearsetPOC/force-app/main/default/objects/SalesforceMemberTierHistory__x/SalesforceMemberTierHistory__x.object-meta.xml
<CustomObject>
    <description>SalesforceMemberTierHistory</description>
    <externalDataSource>ICLP</externalDataSource>
    <externalName>SalesforceMemberTierHistory</externalName>
    <label>SalesforceMemberTierHistory</label>
    <pluralLabel>SalesforceMemberTierHistory</pluralLabel>
</CustomObject>