GearsetPOC/force-app/main/default/objects/SalesforceMemberTierHistory__x/fields/FromTierCode__c.field-meta.xml
<CustomField>
    <fullName>FromTierCode__c</fullName>
    <description>FromTierCode</description>
    <externalDeveloperName>FromTierCode</externalDeveloperName>
    <label>From tier code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>