GearsetPOC/force-app/main/default/objects/SalesforceMemberTierHistory__x/fields/FromTierDescription__c.field-meta.xml
<CustomField>
    <fullName>FromTierDescription__c</fullName>
    <description>FromTierDescription</description>
    <externalDeveloperName>FromTierDescription</externalDeveloperName>
    <label>From tier description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>