GearsetPOC/force-app/main/default/objects/SalesforceMemberTierHistory__x/fields/ManualAdjustmentReason__c.field-meta.xml
<CustomField>
    <fullName>ManualAdjustmentReason__c</fullName>
    <label>Manual adjustment reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>