GearsetPOC/force-app/main/default/objects/SalesforceMemberTierHistory__x/fields/ManualAdjustmentReasonDescription__c.field-meta.xml
<CustomField>
    <fullName>ManualAdjustmentReasonDescription__c</fullName>
    <label>Manual adjustment reason description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>