GearsetPOC/force-app/main/default/objects/SalesforceMemberTierHistory__x/fields/ToTierCode__c.field-meta.xml
<CustomField>
    <fullName>ToTierCode__c</fullName>
    <externalDeveloperName>ToTierCode</externalDeveloperName>
    <label>ToTierCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>