GearsetPOC/force-app/main/default/objects/SalesforceMemberTierHistory__x/fields/ToTierDescription__c.field-meta.xml
<CustomField>
    <fullName>ToTierDescription__c</fullName>
    <label>To tier description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>